Removed the scroll down button to prevent horizontal scroll

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,6 @@ body {
   background-color: white;
   color: black;
   font-weight: 400;
-  overflow-x: hidden;
 }
 
 p {
